# shelfie

./: .gitignore  CLAUDE.md  README.md  example.yaml  pyproject.toml
src/shelfie/: cfg.py  cli.py  gen.py  prompt.md  prompt_instructions.md  prompt_resolve.md  tools.py
src/shelfie/prompts/: base.md  links.md  translate.md  update.md
tests/: test_cfg.py  test_cli.py  test_gen.py  test_tools.py
